remove deprecated and unused /message rest endpoints
